Change app name

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-application.name=twenty_fields_of_sorrow
+application.name=fields-of-sorrow
 
 # Application mode
 # ~~~~~
